# Bad_Practices

./: Dockerfile  README.md  app.py
Bad_Practices_Project/: CMakeLists.txt  README.md
Bad_Practices_Project/src/: main.cpp  utils.cpp  utils.h
src/: config_processor.py
